--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@uppy/core": "^1.10.4",
+    "@uppy/file-input": "^1.4.11",
+    "@uppy/status-bar": "^1.6.5",
+    "@uppy/tus": "^1.5.12",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "filepond": "^4.13.5",
+    "npm": "^6.14.5",
+    "vue": "^2.6.11",
+    "vue-filepond": "^6.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.3.0",
