--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@uppy/core": "^1.10.4",
     "@uppy/file-input": "^1.4.11",
     "@uppy/status-bar": "^1.6.5",
-    "@uppy/tus": "^1.5.12",
+    "@uppy/xhr-upload": "^1.5.10",
     "core-js": "^3.6.4",
     "filepond": "^4.13.5",
     "npm": "^6.14.5",
